fix the layout issue of contact section .

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600;1,900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;800&display=swap");
 * {
   font-family: "Poppins", sans-serif;
   margin: 0;
@@ -198,7 +198,7 @@ nav {
 
 .main {
   color: rgb(255, 255, 255);
-  width: 100%;
+  /* width: 100%; */
   min-height: 100vh;
   align-items: center;
   background: #000016;
@@ -352,6 +352,16 @@ nav {
   transition: all 0.3s;
   margin: 30px;
   box-shadow: 0 5px 25px rgba(1, 1, 1, 20%);
+}
+@media (max-width:350px){
+
+  .contact .card--primary{
+    width: 18em;
+    
+  }
+  .card__body p{
+    word-break: break-all;
+  }
 }
 
 .card--primary .icon {
@@ -734,3 +744,6 @@ make it thinner, then set it to again wrap around the entire parent element.
   );
   box-shadow: 0 4px 15px 0 rgba(45, 54, 65, 0.75);
 }
+
+
+/* contact section */
